--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3,h4, h5, h6{
 	margin-top: 10px;
 	text-align: center;
 	font-weight: 600;
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6{
 .img-responsive{
 	max-width: 100%;
 }
-
+	
 #breakfast,
 #lunch,
 #espresso,
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 #producto .info-producto{
-	border: 1px solid #c7c7c7;
+	border: none;
 	margin: 32px 20px;
 	padding:  20px; 
 		
@@ -174,4 +174,35 @@ i{
 	border: none;
 	box-shadow: none;
 	background-color: transparent;
+}
+
+#product_description {
+	font-size: 12px;
+	color: gray;
+}
+
+#sec-team .imagen{
+	width:40px;
+	height:40px;
+	border-radius: 10px 10px 10px 0px;
+	
+}
+
+.info-about .fab{
+	position: relative;
+}
+.info-about ul{
+	padding: 0;
+	list-style: none;
+}
+.info-about ul li{
+	display: inline-block;
+}
+#producto{
+	font-family: 'Montserrat', sans-serif;
+	background-color: #fff;
+	color: #141313;
+}
+.fas{
+	color: #fff;
 }
